score/testdata/networkpolicy-statefulset-matching.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testapp-netpol
  namespace: testspace
spec:
  podSelector:
    matchLabels:
      app: foo
  policyTypes:
    - Egress
    - Ingress
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-test-1
  namespace: testspace
spec:
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foobar
          image: foo:bar
